--- a/index.html
+++ b/index.html
@@ -41,53 +41,109 @@
         <div class="players-profile">
           <div class="player">
             <img src="images/players/player-1.png" alt="" />
-            <h2>Player 01</h2>
+            <h2>Neymar Jr</h2>
+            <p>
+              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer  plays as a forward Brazil national team. 
+            </p>
+          </div>
+          <div class="player">
+            <img src="images/players/player-2.png" alt="" />
+            <h2> Lionel Messi  </h2>
+            <p>
+              Lionel Messi is an Argentine professional footballer forward or an attacking midfielder and captains the Argentina national team. 
+            </p>
+          </div>
+          <div class="player">
+            <img src="images/players/player-3.png" alt="" />
+            <h2>Cristiano Ronaldo</h2>
+            <p>
+              Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus 
+            </p>
+          </div>
+          <div class="player">
+            <img src="images/players/player-4.png" alt="" />
+            <h2>Paulo Dybala</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid,
               dolorum?Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
           </div>
           <div class="player">
-            <img src="images/players/player-1.png" alt="" />
-            <h2>Player 01</h2>
+            <img src="images/players/player-5.png" alt="" />
+            <h2>Mesut Ozil</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid,
-              dolorum?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Mesut Özil is a German professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe. Özil is known for his skills.
             </p>
           </div>
           <div class="player">
-            <img src="images/players/player-1.png" alt="" />
-            <h2>Player 01</h2>
+            <img src="images/players/player-6.png" alt="" />
+            <h2>Mauro Icardi</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid,
-              dolorum?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Mesut Özil is a German professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe. Özil is known for his skills.
             </p>
           </div>
           <div class="player">
-            <img src="images/players/player-1.png" alt="" />
-            <h2>Player 01</h2>
+            <img src="images/players/player-7.png" alt="" />
+            <h2>Di Maria</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid,
-              dolorum?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Di Maria is a Argentain professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe. Özil is known for his skills.
             </p>
           </div>
+          <div class="player">
+            <img src="images/players/player-8.png" alt="" />
+            <h2>Kylian Mbappé</h2>
+            <p>
+              Kylian Mbappé is a Portugals professional footballer as an attacking  for Süper Lig club Fenerbahçe.  is known for his skills.
+            </p>
+          </div>
+          <div class="player">
+            <img src="images/players/player-9.png" alt="" />
+            <h2>Mohamed Salah</h2>
+            <p>
+              Mohamed Salah is a French professional footballer who plays as Fenerbahçe.  is known for his skills.
+            </p>
+          </div>
+          <div class="player">
+            <img src="images/players/player-10.png" alt="" />
+            <h2>Harry Kane</h2>
+            <p>
+              Harry Kane is a portuguse professional footballer who plays as  club Fenerbahçe.  is known for his skills.
+            </p>
+          </div>
+          <div class="player">
+            <img src="images/players/player-11.png" alt="" />
+            <h2>Kevin De Bruyne</h2>
+            <p>
+              Kevin De Bruyne is a Brazilian professional footballer who plays as an attacking  for Süp is known for his skills.
+            </p>
+          </div>
+          <div class="player">
+            <img src="images/players/player-12.png" alt="" />
+            <h2>Philippe Coutinho</h2>
+            <p>
+              Philippe Coutinho is a English professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe is known for his skills.
+            </p>
+          </div>
+          
         </div>
       </section>
       <!-- Bonus section ----------------------------------------- -->
       <!-- Bonus section ----------------------------------------- -->
       <section class="phot-container">
+        <h2>Image Gallery</h2>
         <div class="photo-album">
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
-          <img src="images/players/player-1.png" alt="Play 01" />
+          <img src="images/players/player-1.png" alt="Neymar Jr" />
+          <img src="images/players/player-2.png" alt="Lionel Messi" />
+          <img src="images/players/player-3.png" alt="Cristiano ronaldo" />
+          <img src="images/players/player-4.png" alt="Paulo Dybala" />
+          <img src="images/players/player-5.png" alt="Mesut Ozil" />
+          <img src="images/players/player-6.png" alt="Mauro Icardi" />
+          <img src="images/players/player-7.png" alt="Di Maria" />
+          <img src="images/players/player-8.png" alt="Kylia Mbapp6" />
+          <img src="images/players/player-9.png" alt="Mohamed Sala" />
+          <img src="images/players/player-10.png" alt="Harry Kane" />
+          <img src="images/players/player-11.png" alt="Kevin De Bruyne" />
+          <img src="images/players/player-12.png" alt="Philippe Coutinho" />
         </div>
       </section>
       <section class="next-Countdown">
