--- a/index.html
+++ b/index.html
@@ -37,27 +37,31 @@
         </div>
       </section>
       <!--Player Profile SEction  -->
-      <section class="container">
+      <section class="player-container">
         <div class="players-profile">
           <div class="player">
             <img src="images/players/player-1.png" alt="" />
             <h2>Neymar Jr</h2>
             <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer  plays as a forward Brazil national team. 
+              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+              professional footballer plays as a forward Brazil national team.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-2.png" alt="" />
-            <h2> Lionel Messi  </h2>
+            <h2>Lionel Messi</h2>
             <p>
-              Lionel Messi is an Argentine professional footballer forward or an attacking midfielder and captains the Argentina national team. 
+              Lionel Messi is an Argentine professional footballer forward or an
+              attacking midfielder and captains the Argentina national team.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-3.png" alt="" />
             <h2>Cristiano Ronaldo</h2>
             <p>
-              Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus 
+              Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
+              professional footballer who plays as a forward for Serie A club
+              Juventus
             </p>
           </div>
           <div class="player">
@@ -72,63 +76,74 @@
             <img src="images/players/player-5.png" alt="" />
             <h2>Mesut Ozil</h2>
             <p>
-              Mesut Özil is a German professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe. Özil is known for his skills.
+              Mesut Özil is a German professional footballer who plays as an
+              attacking for Süper Lig club Fenerbahçe. Özil is known for his
+              skills.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-6.png" alt="" />
             <h2>Mauro Icardi</h2>
             <p>
-              Mesut Özil is a German professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe. Özil is known for his skills.
+              Mesut Özil is a German professional footballer who plays as an
+              attacking for Süper Lig club Fenerbahçe. Özil is known for his
+              skills.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-7.png" alt="" />
             <h2>Di Maria</h2>
             <p>
-              Di Maria is a Argentain professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe. Özil is known for his skills.
+              Di Maria is a Argentain professional footballer who plays as an
+              attacking for Süper Lig club Fenerbahçe. Özil is known for his
+              skills.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-8.png" alt="" />
             <h2>Kylian Mbappé</h2>
             <p>
-              Kylian Mbappé is a Portugals professional footballer as an attacking  for Süper Lig club Fenerbahçe.  is known for his skills.
+              Kylian Mbappé is a Portugals professional footballer as an
+              attacking for Süper Lig club Fenerbahçe. is known for his skills.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-9.png" alt="" />
             <h2>Mohamed Salah</h2>
             <p>
-              Mohamed Salah is a French professional footballer who plays as Fenerbahçe.  is known for his skills.
+              Mohamed Salah is a French professional footballer who plays as
+              Fenerbahçe. is known for his skills.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-10.png" alt="" />
             <h2>Harry Kane</h2>
             <p>
-              Harry Kane is a portuguse professional footballer who plays as  club Fenerbahçe.  is known for his skills.
+              Harry Kane is a portuguse professional footballer who plays as
+              club Fenerbahçe. is known for his skills.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-11.png" alt="" />
             <h2>Kevin De Bruyne</h2>
             <p>
-              Kevin De Bruyne is a Brazilian professional footballer who plays as an attacking  for Süp is known for his skills.
+              Kevin De Bruyne is a Brazilian professional footballer who plays
+              as an attacking for Süp is known for his skills.
             </p>
           </div>
           <div class="player">
             <img src="images/players/player-12.png" alt="" />
             <h2>Philippe Coutinho</h2>
             <p>
-              Philippe Coutinho is a English professional footballer who plays as an attacking  for Süper Lig club Fenerbahçe is known for his skills.
+              Philippe Coutinho is a English professional footballer who plays
+              as an attacking for Süper Lig club Fenerbahçe is known for his
+              skills.
             </p>
           </div>
-          
         </div>
       </section>
       <!-- Bonus section ----------------------------------------- -->
-      <!-- Bonus section ----------------------------------------- -->
+      <!-- Bonus Image Gallery ----------------------------------------- -->
       <section class="phot-container">
         <h2>Image Gallery</h2>
         <div class="photo-album">
@@ -146,8 +161,9 @@
           <img src="images/players/player-12.png" alt="Philippe Coutinho" />
         </div>
       </section>
+      <!-- Bonus Counter ----------------------------------------- -->
       <section class="next-Countdown">
-        <h2>Next CUP Countdown</h2>
+        <h2>Next Copa America 2022</h2>
         <div class="time-container">
           <div class="timer">
             <div class="single-digit">
@@ -176,6 +192,7 @@
         </div>
       </section>
     </main>
+    <!-- Footer Section --------------------- -->
     <footer>
       <div class="logo">
         <img src="images/Logo.png" alt="" />
@@ -195,7 +212,7 @@
         </div>
       </div>
       <div class="copyright">
-        <span>copyright@2022</span>
+        <span>copyright@2022 Football</span>
       </div>
     </footer>
   </body>
